--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
   padding: 0px;
 }
 .influencers-container{
-margin-left: 50px;
+margin-left: 110px;
 margin-top: 50px;
 margin-right: 50px;
 display: flex;
@@ -53,9 +53,22 @@ border: 0;
   align-items: center;
   justify-content: center;
   margin-top: 50px;
+  margin-left: 50px;
   background-image: url(./images/Circle\ design.svg);
   background-position: center;
   background-size: cover;
+}
+.sponsors{
+  display: flex;
+  margin-left: 120px;
+  margin-right: 120px;
+  justify-content: space-evenly;
+  margin-top: 50px;
+}
+.sponsors img{
+  border-radius: 10px;
+  margin-top: 50px;
+  width: 40%;
 }
 
 
@@ -75,6 +88,9 @@ border: 0;
   .journey-ad{
     flex-direction: column;
     flex-direction: column-reverse;
+  }
+  .sponsors{
+    
   }
 
 }
