--- a/styles.css
+++ b/styles.css
@@ -70,7 +70,61 @@ border: 0;
  border-radius: 10px;
   margin-top: 50px;
   width: 80%;
-  
+}
+.text h2{
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color: #3A3A3A;
+font-size: 28px;
+font-family: Poppins;
+font-weight: 600;
+margin-top: 50px;
+}
+.collection-img{
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  margin-left: 150px;
+  margin-right: 100px;
+  align-items: center;
+  justify-content: center;
+  margin-top: 50px;
+}
+.collection-img img{
+  padding-top: 20px;
+}
+.image-div h3{
+color: #18191F;
+font-size: 28px;
+font-family: Poppins;
+font-weight: 500;
+padding-bottom: 10px;
+}
+.image-div h5{
+color: rgba(0, 0, 0, 0.87);
+font-size: 18px;
+font-family: Inter;
+font-weight: bold;
+padding-bottom: 10px;
+}
+.image-div p{
+  color: #787885;
+font-size: 14px;
+font-family: Inter;
+font-weight: 700;
+padding-bottom: 10px;
+}
+.image-div{
+  background: white; 
+box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
+justify-content: center;
+align-items: center;
+padding-left: 30px;
+padding-right: 30px;
+margin-left: 30px;
+margin-right: 30px;
+border-radius: 8px;
+margin-bottom: 30px;
 }
 
 
@@ -94,6 +148,9 @@ border: 0;
   .sponsors{
     flex-direction: row;
     flex-wrap: wrap;
+  }
+  .collection-img{
+    grid-template-columns: 1fr;
   }
 
 }
