--- a/styles.css
+++ b/styles.css
@@ -126,7 +126,32 @@ margin-right: 30px;
 border-radius: 8px;
 margin-bottom: 30px;
 }
-
+.see-more{
+  justify-content: right;
+  align-items: right;
+  text-align: right;
+  width: 94.9%;
+  color: #E02C6D;
+}
+.contact-text h3{
+  color: #0A0826;
+font-size: 32px;
+font-family: Poppins;
+font-weight: 700;
+padding-bottom: 20px;
+}
+.contact-text{
+  margin-left: 50px;
+  margin-top: 80px;
+}
+.contact-bar{
+  display: flex;
+  width: 100%;
+  margin-top: 100px;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 20px;
+}
 
 
 
@@ -151,6 +176,9 @@ margin-bottom: 30px;
   }
   .collection-img{
     grid-template-columns: 1fr;
+  }
+  .contact-bar{
+    flex-direction: column-reverse;
   }
 
 }
